# annotator

./: Cargo.toml  Dockerfile  README.md
src/: annotation.rs  config.rs  correlate.rs  event.rs  grafana.rs  kafka.rs  main.rs
