[package]
name = "annotator"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
repository = "https://github.com/rruckley/annotator"
description = "Create annotations in Grafana based on alerts in Kafka topic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
kafka = "0.9.0"
reqwest = {version = "0.11.16", features = ["rustls-tls"]}
serde = "1.0.159"
tokio = "1.27.0"
